# Editor

./: Alchemist_Editor.pro  CMakeLists.txt  Editor.pro  License.txt  README.md  editor.ini  editor.py
Releases/Sources/: Editor_0.1.0_src.7z
python/: editor.py
src/: block.cpp  block.h  editor.cpp  editor.h  init.cpp  init.h  level.cpp  level.h  login.cpp  login.h  main.cpp
